--- a/HTML/style.css
+++ b/HTML/style.css
@@ -1,14 +1,14 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'poppins','sans-serif';
+    font-family: 'Courier New', Courier, monospace;
     box-sizing: border-box;
 }
 .container
 {
     width: 100%;
 height: 100vh;
-background-image: linear-gradient (rgba (0,0,50, 0.8), rgba(0,0,50,0.8)), url(bg.png );
+background-image: url(bg.png );
 background-position: center; 
 background-size: cover;
 position:relative;
@@ -41,4 +41,57 @@ position:relative;
     bottom: -12px;
     left: 50px;
     transform: translateX(-50%);
+}
+
+
+.input-field{
+    background: #eaeaea;
+    margin: 15px 0;
+    border-radius:3px;
+    display: flex;
+    align-items: center;
+    max-height: 65px;
+    transition: max-height 0.5s;
+    overflow: hidden;
+}
+input{
+    width: 100%;
+    background: transparent;
+    border: 0;
+    outline: 0;
+    padding: 18px 15px;
+}.input-field i{
+    margin-left: 15px;
+    color: #2d07eb99;
+}
+form p{
+    text-align: left;
+    font-size: 13px;
+}
+form p a{
+    text-decoration: none;
+    color: #3c00a0;
+}
+.btn-field{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+.btn-field button{
+    flex-basis: 48%;
+    background: #3c00a0;
+    color: #fff;
+    height: 40px;
+    border-radius: 20px;
+    border: 0;
+    outline: 0;
+    cursor: pointer;
+    transition: background 1s;
+}
+.input-group{
+    height: 220px;
+}
+.btn-field button.disable{
+    background: #eaeaea;
+    color: #555;
 }
